(page) Add links

--- a/docs/template/index.html
+++ b/docs/template/index.html
@@ -28,7 +28,7 @@
   <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
 #}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{paper.title}}</title>
+  <title>[{{paper.conference}}] {{paper.title}}</title>
   <link rel="icon" type="image/svg" href='static/images/icon.svg'/>
 
   <!-- preconnect -->
