(page) add teaser

--- a/docs/template/index.html
+++ b/docs/template/index.html
@@ -138,6 +138,7 @@
                 {% endfor %}
               </div>
             </div>
+            {%-if teaser %}<div class="column has-text-centered is-size-5"><b>{{teaser.content}}</b></div>{%endif%}
           </div>
         </div>
       </div>
