(page) fix font size

--- a/docs/template/index.html
+++ b/docs/template/index.html
@@ -250,7 +250,7 @@
   <section class="section hero is-light red-link" id="news">
     <div class="container is-max-desktop"style="width:100%">
       <div class="column">
-        <h2 class="title is-3">News 📰</h2>
+        <h2 class="title">News 📰</h2>
         <div class="content has-text-justified">
           <p><table><tbody>
           {%for item in news.contents%}
